--- a/assignment1_submission/InfiniteMatrixComplete 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment1_submission/InfiniteMatrixComplete 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -184,8 +184,11 @@ LastLevel=/Game/InfiniteMatrix/Maps/TutorialMap
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 
 [UMGEditor.Designer]
@@ -199,10 +202,13 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
-MRUItem1=/Game/InfiniteMatrix/UI/ScoreWidget
-MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_Player
-MRUItem3=/Game/InfiniteMatrix/UI/HealthWidget
+MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
+MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_HealthPacket
+MRUItem3=/Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health
+MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
+MRUItem5=/Game/InfiniteMatrix/UI/ScoreWidget
+MRUItem6=/Game/InfiniteMatrix/UI/HealthWidget
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -378,6 +384,58 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+BP_HealthPacket_C.TransformCommon=True
+BP_HealthPacket_C.StaticMesh=True
+BP_HealthPacket_C.Tick=True
+BP_HealthPacket_C.ComponentTick=True
+BP_HealthPacket_C.Physics=True
+BP_HealthPacket_C.Collision=True
+BP_HealthPacket_C.Lighting=True
+BP_HealthPacket_C.HLOD=True
+BP_HealthPacket_C.Rendering=True
+BP_HealthPacket_C.PathTracing=True
+BP_HealthPacket_C.Navigation=True
+BP_HealthPacket_C.VirtualTexture=True
+BP_HealthPacket_C.Tags=True
+BP_HealthPacket_C.Replication=True
+BP_HealthPacket_C.ComponentReplication=True
+BP_HealthPacket_C.Variable=True
+BP_HealthPacket_C.Cooking=True
+BP_HealthPacket_C.Actor=True
+BP_HealthPacket_C.Input=True
+BP_HealthPacket_C.WorldPartition=True
+BP_HealthPacket_C.Events=True
+BP_TunnelSpawner_C.Tick=True
+BP_TunnelSpawner_C.Replication=True
+BP_TunnelSpawner_C.Rendering=True
+BP_TunnelSpawner_C.Collision=True
+BP_TunnelSpawner_C.Actor=True
+BP_TunnelSpawner_C.Input=True
+BP_TunnelSpawner_C.HLOD=True
+BP_TunnelSpawner_C.Physics=True
+BP_TunnelSpawner_C.WorldPartition=True
+BP_TunnelSpawner_C.Events=True
+PropertyWrapper.Events=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_VariableGet.Events=True
+RandomVector.Field=True
+RandomVector.Tags=True
+RandomVector.ComponentReplication=True
+RandomVector.Activation=True
+RandomVector.Variable=True
+RandomVector.Cooking=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -392,7 +450,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/InfiniteMatrix/UI
+ContentBrowserDrawer.SelectedPaths=/Game/InfiniteMatrix/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -400,6 +458,8 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -409,7 +469,7 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-Object="\"Object.Appearance.Font\" "
+Object="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
@@ -424,6 +484,9 @@ PropertyWrapper.Variable=True
 /Game/InfiniteMatrix/Blueprints/BP_Player.BP_Player=1
 /Game/InfiniteMatrix/UI/ScoreWidget.ScoreWidget=1
 /Game/InfiniteMatrix/Blueprints/BP_Tunnel.BP_Tunnel=1
+/Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health.SM_Pickup_Health=1
+/Game/InfiniteMatrix/Blueprints/BP_HealthPacket.BP_HealthPacket=1
+/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner.BP_TunnelSpawner=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -476,7 +539,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=899.000 Y=27.500
+ScreenPosition=X=1011.000 Y=27.500
 WindowSize=X=2341.000 Y=1413.000
 InitiallyMaximized=False
 
@@ -1516,6 +1579,8 @@ Voice.TimeStamp=2024.01.31-02.51.37
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.01.31-02.51.19
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2024.01.31-02.51.13
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
