--- a/assignment1_submission/InfiniteMatrixComplete 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment1_submission/InfiniteMatrixComplete 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -186,8 +186,10 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 
@@ -202,13 +204,15 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Player
-MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
-MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_HealthPacket
-MRUItem3=/Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health
-MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
-MRUItem5=/Game/InfiniteMatrix/UI/ScoreWidget
-MRUItem6=/Game/InfiniteMatrix/UI/HealthWidget
+MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Enemy
+MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_HealthPacket
+MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
+MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
+MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_Projectile
+MRUItem6=/Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health
+MRUItem7=/Game/InfiniteMatrix/UI/ScoreWidget
+MRUItem8=/Game/InfiniteMatrix/UI/HealthWidget
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -436,6 +440,42 @@ RandomVector.ComponentReplication=True
 RandomVector.Activation=True
 RandomVector.Variable=True
 RandomVector.Cooking=True
+BP_Projectile_C.Tick=True
+BP_Projectile_C.Replication=True
+BP_Projectile_C.Rendering=True
+BP_Projectile_C.Collision=True
+BP_Projectile_C.Actor=True
+BP_Projectile_C.Input=True
+BP_Projectile_C.HLOD=True
+BP_Projectile_C.Physics=True
+BP_Projectile_C.WorldPartition=True
+BP_Projectile_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+StaticMeshComponent.LOD=True
+StaticMeshComponent.RayTracing=True
+StaticMeshComponent.TextureStreaming=True
+StaticMeshComponent.MaterialParameters=True
+BP_Enemy_C.Tick=True
+BP_Enemy_C.Replication=True
+BP_Enemy_C.Rendering=True
+BP_Enemy_C.Collision=True
+BP_Enemy_C.Actor=True
+BP_Enemy_C.Input=True
+BP_Enemy_C.HLOD=True
+BP_Enemy_C.Physics=True
+BP_Enemy_C.WorldPartition=True
+BP_Enemy_C.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -462,7 +502,7 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
@@ -478,6 +518,7 @@ ActorComponent="\"Object.Collision.BodyInstance\" "
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=True
+StaticMeshComponent.ComponentTick=False
 
 [AssetEditorToolkitTabLocation]
 /Game/InfiniteMatrix/UI/HealthWidget.HealthWidget=1
@@ -487,6 +528,8 @@ PropertyWrapper.Variable=True
 /Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health.SM_Pickup_Health=1
 /Game/InfiniteMatrix/Blueprints/BP_HealthPacket.BP_HealthPacket=1
 /Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner.BP_TunnelSpawner=1
+/Game/InfiniteMatrix/Blueprints/BP_Projectile.BP_Projectile=1
+/Game/InfiniteMatrix/Blueprints/BP_Enemy.BP_Enemy=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -539,7 +582,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=1011.000 Y=27.500
+ScreenPosition=X=856.000 Y=27.500
 WindowSize=X=2341.000 Y=1413.000
 InitiallyMaximized=False
 
@@ -1585,4 +1628,7 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=/Users/Shared/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailCustomWidgetExpansion]
+StaticMeshComponent=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
 
