--- a/assignment1_submission/InfiniteMatrixComplete 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment1_submission/InfiniteMatrixComplete 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -192,6 +192,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -207,15 +208,16 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
-MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_Projectile
+MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_CameraShake
+MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_Player
 MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_Enemy
-MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_HealthPacket
-MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
-MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_Player
-MRUItem6=/Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health
-MRUItem7=/Game/InfiniteMatrix/UI/ScoreWidget
-MRUItem8=/Game/InfiniteMatrix/UI/HealthWidget
+MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
+MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
+MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_Projectile
+MRUItem6=/Game/InfiniteMatrix/Blueprints/BP_HealthPacket
+MRUItem7=/Game/InfiniteMatrix/Meshes/Models/SM_Pickup_Health
+MRUItem8=/Game/InfiniteMatrix/UI/ScoreWidget
+MRUItem9=/Game/InfiniteMatrix/UI/HealthWidget
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -483,6 +485,13 @@ BP_Projectile_C.Default=True
 StaticMeshComponent.Mobile=True
 StaticMeshComponent.AssetUserData=False
 StaticMeshComponent.Replication=True
+BP_CameraShake_C.CameraShake=True
+BP_CameraShake_C.CameraShakePattern=True
+NewBlueprint_C.Oscillation=True
+NewBlueprint_C.AnimShake=True
+NewBlueprint_C.CameraShake=True
+BP_CameraShake_C.Oscillation=True
+BP_CameraShake_C.AnimShake=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -516,12 +525,16 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-Object="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" \"Object.Oscillation.FOVOscillation\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+BP_CameraShake_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" \"Object.Oscillation.FOVOscillation\" "
+DefaultCameraShakeBase="\"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation\" \"Object.CameraShakePattern.RootShakePattern.Object.FOV\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
+CameraShakeBase="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" \"Object.Oscillation.FOVOscillation\" "
+LegacyCameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.LocOscillation.X\" \"Object.Oscillation.LocOscillation.Y\" \"Object.Oscillation.LocOscillation.Z\" \"Object.Oscillation.FOVOscillation\" "
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=True
@@ -538,6 +551,7 @@ StaticMeshComponent.ComponentTick=False
 /Game/InfiniteMatrix/Blueprints/BP_Projectile.BP_Projectile=1
 /Game/InfiniteMatrix/Blueprints/BP_Enemy.BP_Enemy=1
 /Game/InfiniteMatrix/Blueprints/BP_Enemy.BP_Enemy_C:EnemyMesh_GEN_VARIABLE=1
+/Game/InfiniteMatrix/Blueprints/BP_CameraShake.BP_CameraShake=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -590,7 +604,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=854.000 Y=27.500
+ScreenPosition=X=679.000 Y=27.500
 WindowSize=X=2341.000 Y=1413.000
 InitiallyMaximized=False
 
