assignment2 add score

--- a/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -167,6 +167,7 @@ LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -181,6 +182,7 @@ OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/HealthWidget
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/PowerUp_Pickup_BP_Child.PowerUp_Pickup_BP_Child
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/UI/WBP_Reset.WBP_Reset
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP.Collectable_Pickup_BP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -528,6 +530,18 @@ HorizontalBox.Performance=True
 HorizontalBox.Rendering=True
 HorizontalBox.Navigation=True
 HorizontalBox.Localization=True
+ScoreWidget_C.Appearance=True
+ScoreWidget_C.Input=True
+ScoreWidget_C.Interaction=True
+ScoreWidget_C.Designer=True
+ScoreWidget_C.Performance=True
+ScoreWidget_C.Layout=True
+ScoreWidget_C.Behavior=True
+ScoreWidget_C.Render Transform=True
+ScoreWidget_C.Localization=True
+ScoreWidget_C.Accessibility=True
+ScoreWidget_C.Rendering=True
+ScoreWidget_C.Navigation=True
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=25.500
@@ -1609,7 +1623,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/UI
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/PlayerCharacter
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1623,17 +1637,18 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/LearningKit_Games/Blueprints/BaseClasses/Master_Pickup_BP
-MRUItem1=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
-MRUItem2=/Game/LearningKit_Games/Blueprints/UI/WBP_Reset
-MRUItem3=/Game/LearningKit_Games/Blueprints/Pickups/PowerUp_Pickup_BP_Child
-MRUItem4=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/HealthWidget
-MRUItem6=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
-MRUItem7=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode
-MRUItem8=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions
-MRUItem9=/Game/Hour_of_Code/Widgets/C_healthColor
-MRUItem10=/Game/Hour_of_Code/Widgets/W_healthBar
+MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
+MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/ScoreWidget
+MRUItem2=/Game/LearningKit_Games/Blueprints/BaseClasses/Master_Pickup_BP
+MRUItem3=/Game/LearningKit_Games/Blueprints/UI/WBP_Reset
+MRUItem4=/Game/LearningKit_Games/Blueprints/Pickups/PowerUp_Pickup_BP_Child
+MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem6=/Game/LearningKit_Games/Blueprints/PlayerCharacter/HealthWidget
+MRUItem7=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
+MRUItem8=/Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode
+MRUItem9=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BPI_LearningKit_PlayerInteractions
+MRUItem10=/Game/Hour_of_Code/Widgets/C_healthColor
+MRUItem11=/Game/Hour_of_Code/Widgets/W_healthBar
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=1
@@ -1789,4 +1804,11 @@ DeleteConfirmationVariable_Warning=False
 
 [MessageLog]
 LastLogListing=PIE
+
+[DetailPropertyExpansion]
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object=
 
