stop moving when restart shows

--- a/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -167,10 +167,10 @@ LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -690,6 +690,12 @@ SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
 SkeletalMeshComponent.LOD=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentTick=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=25.500
@@ -1976,14 +1982,18 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [DetailCustomWidgetExpansion]
 BP_Pursuer_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-CapsuleComponent=BP_Pursuer_C.Physics.ConstraintsGroup
+CapsuleComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 PropertyWrapper=BP_Pursuer_C.Physics.ConstraintsGroup
-BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup
-EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup
+BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 StaticMeshActor=BP_Pursuer_C.Physics.ConstraintsGroup
 K2Node_VariableGet=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableSet=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+CharacterMovementComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+K2Node_Variable=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+PlayerController=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [SelectionDetails]
 PreserveScaleRatio=False
