--- a/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -885,6 +885,7 @@ BP_LandMine_C.Events=True
 BP_LandMine_C.TransformCommon=True
 BP_LandMine_C.Networking=True
 BP_LandMine_C.Cooking=True
+K2Node_SwitchInteger.PinOptions=True
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=25.500
@@ -1966,7 +1967,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/machine_gun
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/MUSIC
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2200,7 +2201,7 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
