--- a/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -166,8 +166,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -182,20 +183,12 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=CurveAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/LearningKit_Games/machine_gun/BP_LandMine.BP_LandMine
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/LearningKit_Games/machine_gun/BP_Turret.BP_Turret
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_Pursuer.BP_Pursuer
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/UI/WBP_Victory.WBP_Victory
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP.Collectable_Pickup_BP
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/ScoreWidget.ScoreWidget
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -907,8 +900,8 @@ PostProcessVolume.Networking=True
 PostProcessVolume.Actor=True
 
 [RootWindow]
-ScreenPosition=X=85.000 Y=25.500
-WindowSize=X=2475.000 Y=1415.000
+ScreenPosition=X=84.000 Y=25.500
+WindowSize=X=3355.000 Y=1415.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2067,6 +2060,9 @@ MRUItem20=/Game/Hour_of_Code/Widgets/W_healthBar
 /Game/StarterContent/Particles/P_Explosion.P_Explosion=1
 /Game/Hour_of_Code/Blueprints/BP_checkpoint.BP_checkpoint=1
 /Game/LearningKit_Games/machine_gun/GetDamageLib.GetDamageLib=1
+/Game/LearningKit_Games/machine_gun/BP_LandMine.BP_LandMine=1
+/Game/LearningKit_Games/Blueprints/UI/WBP_Victory.WBP_Victory=1
+/Game/LearningKit_Games/Blueprints/PlayerCharacter/ScoreWidget.ScoreWidget=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2232,7 +2228,7 @@ SceneComponent=
 ActorComponent=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 CapsuleComponent=
 BP_LandMine_C=
 Pawn=
@@ -2241,7 +2237,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 [DetailCustomWidgetExpansion]
 BP_Pursuer_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 CapsuleComponent=NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters,BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
+SkeletalMeshComponent=
 PropertyWrapper=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
