--- a/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/assignment2 5.3/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -168,16 +168,16 @@ LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Cascade
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -189,6 +189,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=CurveAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
+OpenAssetsAtExit=/Game/LearningKit_Games/machine_gun/BP_Turret.BP_Turret
+OpenAssetsAtExit=/Game/LearningKit_Games/machine_gun/BP_Bullet.BP_Bullet
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_Pursuer.BP_Pursuer
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -900,8 +904,8 @@ PostProcessVolume.Networking=True
 PostProcessVolume.Actor=True
 
 [RootWindow]
-ScreenPosition=X=84.000 Y=25.500
-WindowSize=X=3355.000 Y=1415.000
+ScreenPosition=X=73.000 Y=38.500
+WindowSize=X=1654.000 Y=1079.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1979,7 +1983,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/UI
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/PlayerCharacter
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2014,16 +2018,16 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/LearningKit_Games/Blueprints/PlayerCharacter/ScoreWidget
-MRUItem1=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
-MRUItem2=/Game/LearningKit_Games/Blueprints/UI/WBP_Victory
-MRUItem3=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_Pursuer
-MRUItem4=/Game/LearningKit_Games/machine_gun/BP_Turret
-MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem6=/Game/LearningKit_Games/machine_gun/BP_LandMine
-MRUItem7=/Game/Hour_of_Code/Blueprints/BP_checkpoint
-MRUItem8=/Game/StarterContent/Particles/P_Explosion
-MRUItem9=/Game/LearningKit_Games/machine_gun/BP_Bullet
+MRUItem0=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_Pursuer
+MRUItem1=/Game/LearningKit_Games/machine_gun/BP_Bullet
+MRUItem2=/Game/LearningKit_Games/machine_gun/BP_Turret
+MRUItem3=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem4=/Game/LearningKit_Games/Blueprints/PlayerCharacter/ScoreWidget
+MRUItem5=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
+MRUItem6=/Game/LearningKit_Games/Blueprints/UI/WBP_Victory
+MRUItem7=/Game/LearningKit_Games/machine_gun/BP_LandMine
+MRUItem8=/Game/Hour_of_Code/Blueprints/BP_checkpoint
+MRUItem9=/Game/StarterContent/Particles/P_Explosion
 MRUItem10=/Game/LearningKit_Games/machine_gun/arma
 MRUItem11=/Game/LearningKit_Games/Blueprints/PlayerCharacter/EAIState
 MRUItem12=/Game/LearningKit_Games/Blueprints/UI/WBP_Reset
@@ -2037,7 +2041,7 @@ MRUItem19=/Game/Hour_of_Code/Widgets/C_healthColor
 MRUItem20=/Game/Hour_of_Code/Widgets/W_healthBar
 
 [AssetEditorToolkitTabLocation]
-/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=1
+/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
 /Game/Hour_of_Code/Widgets/C_healthColor.C_healthColor=1
 /Game/Hour_of_Code/Widgets/W_healthBar.W_healthBar=1
 /Game/LearningKit_Games/Blueprints/GameFramework/BP_LearningKitGameMode.BP_LearningKitGameMode=1
@@ -2051,10 +2055,10 @@ MRUItem20=/Game/Hour_of_Code/Widgets/W_healthBar
 /Game/LearningKit_Games/Blueprints/UI/WBP_Reset.WBP_Reset=1
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/HealthWidget.HealthWidget=1
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/EAIState.EAIState=1
-/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_Pursuer.BP_Pursuer=1
+/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_Pursuer.BP_Pursuer=0
 /Game/LearningKit_Games/Explosion/P_Explosion_Big_C.P_Explosion_Big_C=0
 /Game/LearningKit_Games/machine_gun/BP_Bullet.BP_Bullet=0
-/Game/LearningKit_Games/machine_gun/BP_Turret.BP_Turret=1
+/Game/LearningKit_Games/machine_gun/BP_Turret.BP_Turret=0
 /Game/LearningKit_Games/Realistic_Starter_VFX_Pack_Vol2/Particles/Explosion/P_Explosion_Big_C.P_Explosion_Big_C=1
 /Game/LearningKit_Games/Realistic_Starter_VFX_Pack_Vol2/Particles/Explosion/P_Explosion_Big_A.P_Explosion_Big_A=1
 /Game/StarterContent/Particles/P_Explosion.P_Explosion=1
@@ -2217,15 +2221,15 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
@@ -2237,10 +2241,10 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 [DetailCustomWidgetExpansion]
 BP_Pursuer_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 CapsuleComponent=NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters,BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 PropertyWrapper=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
-EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 StaticMeshActor=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 K2Node_VariableGet=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 K2Node_CustomEvent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
@@ -2259,7 +2263,7 @@ NiagaraActor=NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameter
 NiagaraFloat=NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters,BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup
 LinearColor=NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters,BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup
 InstancedFoliageActor=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
-BoxComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BoxComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 Character=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 BP_LandMine_C=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
 AudioComponent=BP_Pursuer_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,NiagaraActor.NiagaraComponent_Parameters.NiagaraComponent_Parameters
